rename scatter plot div

--- a/scatterChart.html
+++ b/scatterChart.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="offsetDiv">
-  <div id="test1" class='with-3d-shadow with-transitions'>
+  <div id="eui-vs-sf" class='graph with-3d-shadow with-transitions'>
     <svg></svg>
   </div>
 </div>
