use building data, details on mouseover

--- a/scatterChart.html
+++ b/scatterChart.html
@@ -10,13 +10,14 @@
   <div id="eui-vs-sf" class='graph with-3d-shadow with-transitions'>
     <svg></svg>
   </div>
+  <div id="selected"></div>
 </div>
 
 <script src="d3.v3.js"></script>
+<script src="nvd3/nv.d3.js"></script>
 <script src="nvd3/axis.js"></script>
 <script src="nvd3/distribution.js"></script>
 <script src="nvd3/legend.js"></script>
-<script src="nvd3/nv.d3.js"></script>
 <script src="nvd3/scatter.js"></script>
 <script src="nvd3/scatterChart.js"></script>
 <script src="nvd3/tooltip.js"></script>
