--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -21,7 +21,7 @@
     <li><svg id="overview-eui-quantile" height=0></svg></li>
   </ul>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/eui-sf">EUI vs SF</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
