--- a/scatterChart.html
+++ b/scatterChart.html
@@ -13,7 +13,7 @@
   <div id="selected"></div>
 </div>
 
-<script src="d3.v3.js"></script>
+<script src="d3.js"></script>
 <script src="nvd3/nv.d3.js"></script>
 <script src="nvd3/axis.js"></script>
 <script src="nvd3/distribution.js"></script>
