--- a/scatterChart.html
+++ b/scatterChart.html
@@ -9,6 +9,8 @@
 <div id="offsetDiv">
   <div id="eui-vs-sf" class='graph with-3d-shadow with-transitions'>
     <svg></svg>
+    <form>
+      <label for="minSF">minimum SF</label><input id="minSF" type=number />
   </div>
   <div id="selected"></div>
 </div>
