--- a/scatterChart.html
+++ b/scatterChart.html
@@ -10,12 +10,15 @@
   <div id="eui-vs-sf" class='graph with-3d-shadow with-transitions'>
     <svg></svg>
     <form>
-      <label for="minSF">minimum SF</label><input id="minSF" type=number />
+      <label for="minSF">minimum floor area [sf]</label><input id="minSF" type=number />
+      <label for="maxSF">maximum floor area [sf]</label><input id='maxSF' type=number />
+    </form>
   </div>
   <div id="selected"></div>
 </div>
 
 <script src="d3.js"></script>
+<script src="underscore-min.js"></script>
 <script src="nvd3/nv.d3.js"></script>
 <script src="nvd3/axis.js"></script>
 <script src="nvd3/distribution.js"></script>
