add react.js, delete code from other branches

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<link href="css/nv.d3.css" rel="stylesheet" type="text/css">
 <link href="css/bldgenergy.css" rel="stylesheet" type="text/css">
 
 <body>
@@ -17,14 +16,6 @@
   <div id="selected"></div>
 </div>
 
-<script src="d3.js"></script>
-<script src="underscore-min.js"></script>
-<script src="nvd3/nv.d3.js"></script>
-<script src="nvd3/axis.js"></script>
-<script src="nvd3/distribution.js"></script>
-<script src="nvd3/legend.js"></script>
-<script src="nvd3/scatter.js"></script>
-<script src="nvd3/scatterChart.js"></script>
-<script src="nvd3/tooltip.js"></script>
-<script src="nvd3/utils.js"></script>
-<script src="scatterChart.js"></script>
+<script src="lib/react.js"></script>
+<script src="lib/underscore-min.js"></script>
+<script src="js/sluice.js"></script>
