react.js hello world

--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
 
 <body>
 
-<div id="offsetDiv">
-  <div id="eui-vs-sf" class='graph with-3d-shadow with-transitions'>
-    <svg></svg>
-    <form>
-      <label for="minSF">minimum floor area [sf]</label><input id="minSF" type=number />
-      <label for="maxSF">maximum floor area [sf]</label><input id='maxSF' type=number />
-    </form>
-  </div>
-  <div id="selected"></div>
-</div>
+  <div id="example"></div>
 
 <script src="lib/react.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="js/sluice.js"></script>
+</body>
