--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
 <script src="lib/react.js"></script>
 <script src="lib/underscore-min.js"></script>
+<script src="lib/d3.js"></script>
 <script src="js/sluice.js"></script>
 </body>
