--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <script src="lib/react.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="lib/d3.js"></script>
+<script src="js/scatterPlot.js"></script>
 <script src="js/sluice.js"></script>
 </body>
