--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/d3.js"></script>
 <script src="js/scatterPlot.js"></script>
+<script src="js/filterForm.js"></script>
 <script src="js/sluice.js"></script>
 </body>
