WIP: filter and graph together under common parent

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <script src="lib/d3.js"></script>
 <script src="js/scatterPlot.js"></script>
 <script src="js/filterForm.js"></script>
+<script src="js/filterGraph.js"></script>
 <script src="js/sluice.js"></script>
 </body>
