load everything with requirejs

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-
-<link href="css/bldgenergy.css" rel="stylesheet" type="text/css">
-
-<body>
-
-  <div id="example"></div>
-
-<script src="lib/react.js"></script>
-<script src="lib/underscore-min.js"></script>
-<script src="lib/d3.js"></script>
-<script src="js/scatterPlot.js"></script>
-<script src="js/filterForm.js"></script>
-<script src="js/filterGraph.js"></script>
-<script src="js/sluice.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Sluice Graph</title>
+    <link href="css/bldgenergy.css" rel="stylesheet" type="text/css" />
+    <script data-main="js/config" src="lib/requirejs/require.js"></script>
+  </head>
+  <body>
+    <div id="example"></div>
+  </body>
+</html>
